# CoreAI_HTCE

./: ACCEPTANCE_REPORT.md  ARCHITECTURE.md  HASHES.txt  Makefile  README.md  RELEASE_MANIFEST.json  capabilities.json  invariants.json  pyproject.toml
docs/: AIR_SPEC.md  CLAIM_BOUNDARY.md  FILE_TREE.md  MATHEMATICAL_CONTRACT.md  README.md  V1_PROOF_OF_CAPABILITY.md
htce_origin/: __init__.py
tests/: test_1000_step_closed_loop.py  test_acceptance_release.py  test_air_language.py  test_air_vm.py  test_architecture_docs.py  test_associative_cortex.py  test_babi_minimal.py  test_betti_calibration.py  test_fact_delta_memory.py  test_homeostasis.py  test_interfaces_import.py  test_invariants_contract.py  test_l1_l2_l3.py  test_l1_sensory_q256.py  test_l3_semantic_q256.py  test_latest_state.py  test_p11_closed_loop.py  test_p12_release_hardening.py  test_p13_no_normalization_decision_core.py  test_p15_topology_acceptance.py  test_p16_l3_rule_promotion.py  test_p17_official_benchmark_harness.py  test_p18_no_leakage_dynamic_benchmark.py  test_p19_hardware_width_verification.py  test_p20_1_pipeline_organization.py  test_p20_2_training_data_readiness.py  test_p20_long_run_stability.py  test_p21_honest_intelligence_closure.py  test_p24_living_active_agent.py  test_p25_unified_living_dialog_simulation.py  test_p26_adaptive_policy_improvement.py  test_p27_continual_adaptive_memory.py  test_p28_multitask_adaptive_memory.py  test_proof_gate.py  test_q16_core.py  test_runtime_lifecycle.py  test_runtime_no_legacy_imports.py  test_sleep_consolidation.py  test_topology_guard.py  (+4 more)
(+103 files in other folders)
